add postgres config and env validation

--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,9 @@ web_modules/
 .env
 .env.test
 .env.production
+.dev.env
+.prod.env
+.test.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
