--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,4 @@
 {
   "singleQuote": true,
-  "trailingComma": "all",
-  "prettier/prettier": ["error", {"singleQuote": true, "parser": "flow"}]
+  "trailingComma": "all"
 }
