--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
     "jest": "^27.2.5",
     "prettier": "^2.5.1",
     "source-map-support": "^0.5.20",
@@ -78,5 +79,10 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "husky": {
+    "hooks":{
+      "pre-commit" : "npm run lint"
+    }
   }
 }
