--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@nestjs/graphql": "^9.1.2",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/bcrypt": "^5.0.0",
     "apollo-server-express": "^3.5.0",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
@@ -81,8 +83,8 @@
     "testEnvironment": "node"
   },
   "husky": {
-    "hooks":{
-      "pre-commit" : "npm run lint"
+    "hooks": {
+      "pre-commit": "npm run lint"
     }
   }
 }
