--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
+    "form-data": "^4.0.0",
+    "got": "^11.7.0",
     "graphql": "^15.8.0",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
