add create account test

--- a/package.json
+++ b/package.json
@@ -91,7 +91,12 @@
     "testEnvironment": "node",
     "moduleNameMapper": {
       "src/(.*)": "<rootDir>/src/$1"
-    }
+    },
+    "coveragePathIgnorePatterns":[
+      "node_modules",
+      ".entity.ts",
+      ".contstants.ts"
+    ]
   },
   "husky": {
     "hooks": {
