Test code for user email doesn't exist when login

--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "coveragePathIgnorePatterns":[
       "node_modules",
       ".entity.ts",
-      ".contstants.ts"
+      ".constants.ts"
     ]
   },
   "husky": {
