--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "form-data": "^4.0.0",
     "got": "^11.7.0",
     "graphql": "^15.8.0",
+    "graphql-subscriptions": "^2.0.0",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
